--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,20 @@
         }
     ],
     "require": {
+        "predis/predis": "^1.0",
+        "monolog/monolog": "^1.18",
+        "eden/sqlite": "^4.0",
 
     },
     "autoload": {
     "psr-4": {
       "Documer\\": "src/"
+    },
+        "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
   }
 }
