--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "predis/predis": "^1.0",
         "monolog/monolog": "^1.18",
         "eden/sqlite": "^4.0",
+        "illuminate/config": "~5.0",
         "illuminate/support": ">=4.0"
     },
 
